Fix scrollbar styles

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -30,7 +30,7 @@
 
 html {
   scrollbar-width: none;
-  scrollbar-color: #fafafa transparent;
+  scrollbar-color: #f8fafc transparent;
 }
 
 body {
